\title{News for Package \pkg{RGA}}
\encoding{UTF-8}

\section{Changes in RGA version 0.2.9999 (2015-xx-xx)}{
  \itemize{
    \item Updated data
    \item Removed \sQuote{Common Queries} vegnette. See references in the \code{get_ga()} help page
    \item Added \code{shiny_dimsmets()} to explore dimensions and metrics for the Core Reporting API
    \item Removed unused \code{rga.token} option
    \item Some inner code improvements
  }
}

\section{Changes in RGA version 0.2.4 (2015-08-31)}{
  \itemize{
    \item Updated data
    \item Added query and profile info to the reporting api data functions: \code{get_ga()}, \code{get_mcf()}, \code{get_rt()} (use \code{attributes()} to see it)
    \item Added \code{username} param to the \code{authorize()} function to define an user account for the authorization
    \item \code{get_rt()} renamed to \code{get_realtime()}
    \item \code{list_metadata()} renamed to \code{list_dimsmets()}
    \item Removed \code{dimsmets()} function and \CRANpkg{shiny} dependency (use \code{View(list_dimsmets())} instead)
    \item Updated minimal \CRANpkg{httr} version to 1.0.0
  }
}

\section{Changes in RGA version 0.2.3 (2015-07-26)}{
  \itemize{
    \item Updated data
    \item Removed deprecated function \code{get_firstadate()}. Use \code{firstdate()} instead
    \item Added \code{new.auth} argument in the \code{authorise()} function for the reauthorization
    \item When receiving the authorization error from the server (error 401), request authorization for the current session (without cacheing)
    \item Fixed \code{list_unsampled_reports()} field typo
    \item Some fixes in the vignettes
    \item Added \dQuote{Common Queries} vignette
  }
}

\section{Changes in RGA version 0.2.2 (2015-06-13)}{
  \itemize{
    \item Updated data
    \item Added \code{accept_json()} to the API requests
    \item Added CRAN version badge to the README
    \item Some fixes in the vignettes
    \item Fixed dates in the NEWS