@@ -11,7 +11,6 @@ export(get_goal)
 export(get_mcf)
 export(get_profile)
 export(get_realtime)
-export(get_rt)
 export(get_unsampled_report)
 export(get_upload)
 export(get_webproperty)
