@@ -45,15 +45,3 @@ get_realtime <- function(profile.id, metrics = "rt:activeUsers", dimensions = NU
     res <- get_report("data/realtime", query, token)
     return(res)
 }
-
-#' @export
-#'
-get_rt <- function(profile.id, metrics = "rt:activeUsers", dimensions = NULL,
-                   sort = NULL, filters = NULL, max.results = NULL, token) {
-    query <- build_query(profile.id = profile.id, metrics = metrics, dimensions = dimensions,
-                         sort = sort, filters = filters, max.results = max.results)
-    .Deprecated("get_realtime")
-    res <- get_report("data/realtime", query, token)
-    return(res)
-}
-
