@@ -8,6 +8,7 @@
     \item Removed \sQuote{Common Queries} vegnette. See references in the \code{get_ga()} help page
     \item Added \code{shiny_dimsmets()} to explore dimensions and metrics for the Core Reporting API
     \item Removed unused \code{rga.token} option
+    \item Remove deprecated \code{get_rt()} function. Use \code{get_realtime()} instead
     \item Some inner code improvements
   }
 }
